Versão com os endpoints da versão antiga recriados, tirando a parte de autenticação

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ HOST=localhost
 LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
+DOMAIN=localhost:3333
+DB_HOST=127.0.0.1
+DB_PORT=1433
+DB_USER=root
+DB_PASSWORD=root
+DB_DATABASE=app
