--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,17 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 DOMAIN=localhost:3333
-DB_HOST=127.0.0.1
-DB_PORT=1433
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_CONNECTION=postgres
+PG_HOST=127.0.0.1
+PG_PORT=5432
+PG_USER=root
+PG_PASSWORD=root
+PG_DATABASE=app
+MSSQL_HOST=COPPETECSQL2
+MSSQL_PORT=1433
+MSSQL_USER=
+MSSQL_PASSWORD=
+MSSQL_DATABASE=COPPETEC
+CRYPTO_ALG=SHA256
+AUTH_USER=
+AUTH_SALT=
