término da autenticação complexa para acessar os endpoints de administração

--- a/.env.example
+++ b/.env.example
@@ -5,17 +5,24 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 DOMAIN=localhost:3333
+#database
 DB_CONNECTION=postgres
+#postgres
 PG_HOST=127.0.0.1
 PG_PORT=5432
 PG_USER=root
 PG_PASSWORD=root
 PG_DATABASE=app
+#mssql
 MSSQL_HOST=COPPETECSQL2
 MSSQL_PORT=1433
 MSSQL_USER=
 MSSQL_PASSWORD=
 MSSQL_DATABASE=COPPETEC
+#security
 CRYPTO_ALG=SHA256
 AUTH_USER=
 AUTH_SALT=
+AUTH_PASS=
+AUTH_SECRET=
+AUTH_EXP=
