--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.2.0",
     "@vinejs/vine": "^2.1.0",
+    "jose": "^5.9.4",
     "luxon": "^3.5.0",
     "pg": "^8.13.0",
     "qrcode": "^1.5.4",
