--- a/.env.example
+++ b/.env.example
@@ -7,18 +7,11 @@ NODE_ENV=development
 DOMAIN=localhost:3333
 #database
 DB_CONNECTION=postgres
-#postgres
-PG_HOST=127.0.0.1
-PG_PORT=5432
-PG_USER=root
-PG_PASSWORD=root
-PG_DATABASE=app
-#mssql
-MSSQL_HOST=COPPETECSQL2
-MSSQL_PORT=1433
-MSSQL_USER=
-MSSQL_PASSWORD=
-MSSQL_DATABASE=COPPETEC
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=root
+DB_PASSWORD=root
+DB_DATABASE=app
 #security
 CRYPTO_ALG=SHA256
 AUTH_USER=
